--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
 
-        <h2>login</h2>
+        <h2>Login</h2>
         <input type="text" 
         placeholder="Email"><br>
         <input type="Password" 
         placeholder="Senha"><br>
-       <button>login</button>
+       <button>Continuar</button>
 
     </div>
     <style>
@@ -29,12 +29,33 @@
             margin: 0;
         }
         .container{
-            background-color: white;
+            background-color: rgb(58, 114, 34);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 50px;
+            text-align: center;
         
         }
+        input{
+            padding: 10px;
+            margin: 10px;
+            border: 5px inset yellowgreen;
+            border-radius: 19px;
+            box-shadow: 0 0 50px;
+        }
+        button{
+            width: 95%;
+            height: 30px;
+            background-color: rgb(46, 196, 109);
+            border-radius: 25px;
+            border: greenyellow;
+            cursor: grab;
+        }
+        button:hover{
+            background-color: rgb(2, 3, 3);
+            color: blue;
+        }
+
 
     </style>
 </body>
