--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <input type="Password" 
         placeholder="Senha"><br>
        <button>Continuar</button>
+       <a href="/cadstro.html">Cadastra-se</a><br>
+       <a href="">Esqueci Senha</a>
 
     </div>
     <style>
@@ -29,7 +31,7 @@
             margin: 0;
         }
         .container{
-            background-color: rgb(58, 114, 34);
+            background-color: rgb(61, 133, 13);
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 50px;
@@ -41,7 +43,7 @@
             margin: 10px;
             border: 5px inset yellowgreen;
             border-radius: 19px;
-            box-shadow: 0 0 50px;
+            box-shadow: 0 0 10px;
         }
         button{
             width: 95%;
@@ -55,7 +57,14 @@
             background-color: rgb(2, 3, 3);
             color: blue;
         }
-
+        a{
+          color: red; 
+          text-decoration: solid;
+        }
+        a:hover{
+            text-decoration: underline;
+            color: bisque
+        }
 
     </style>
 </body>
