--- a/topicos.html
+++ b/topicos.html
@@ -18,10 +18,10 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            background-color: #4e62d4;
-            padding: 10px 0;
-            top: 0;/*posiciona o elemento na superior da tela*/
-            position: fixed;/*fixa a tela pra nao rolar a tela*/
+            background-color: #1c9b66;
+            padding: 10px 0; 
+            top: 0; /*posiciona o elemento na superior da tela*/
+            position: fixed; /*fixa a tela pra nao rolar a tela*/
             width: 100%;
             z-index: 1000;
 
@@ -31,11 +31,11 @@
 </head>
 <body>
     <ul class="menu">
-        <li>inicio
-        <li>sobre
-        <li>perfil
-        <li>contatos
-        <li><a href="./login.html">Conta</a>
+        <li><a href="">inicio</a>
+        <li><a href="">sobre</a>
+        <li><a href="">perfil</a>
+        <li><a href="">perfil</a>
+        <li><a href="./cadastro.html">Conta</a>
     </ul>
 </body>
 </html>
