--- a/topicos.html
+++ b/topicos.html
@@ -30,8 +30,8 @@
             position: relative;
         }
         .menu li a{
-            color:bisque
-            text-decoration:none;
+            color:bisque;
+           text-decoration: none;
             padding:10px 20px;
             display:block
         }
