--- a/cadastro.html
+++ b/cadastro.html
@@ -71,7 +71,7 @@
     <input type="password" id="senha" placeholder="Senha">
     <p class="mensagem" id="mensagem"></p>
         
-        <button onclick="verificarSenha(); verificarEmail();"><a href=index.html>Login</a></button><br>
+        <button><a href=index.html>Login</a></button><br>
         <a href="cadastro.html">Cadastre-se</a>
         <br>
         <a href="./esquecisenha.html">Esqueci minha senha</a><br>
